downgrade spring version create jwt authentication logic

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,3 +6,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+blog.app.jwtSecret=jwtgremioadadjifwjflwfwjgwwgerg.comSecretKey
+blog.app.jwtExpiration=86400
+
