--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=9000
 spring.datasource.url=jdbc:postgresql://localhost:5432/gremio
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=gremio
+spring.datasource.password=gremio
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
