--- a/frontend/gremio/package.json
+++ b/frontend/gremio/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
@@ -25,10 +27,13 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.20",
     "sass": "1.32.12",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.2.4",
     "vue-cli-plugin-quasar": "~5.0.1"
   },
   "eslintConfig": {
