--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,6 +19,11 @@ repositories {
 	mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
+
 dependencies {
 	implementation 'org.flywaydb:flyway-core:9.8.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
