--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,7 +23,6 @@ test {
     useJUnitPlatform()
 }
 
-
 dependencies {
 	implementation 'org.flywaydb:flyway-core:9.8.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -38,8 +37,10 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
 
+
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
+}
 
 flyway {
 	url = 'jdbc:postgresql://localhost:5432/gremio'
