--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id "org.flywaydb.flyway" version "9.8.1"
+	id 'jacoco'
 }
 
 group = 'com.gremio'
@@ -21,6 +22,7 @@ repositories {
 
 test {
     useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 dependencies {
