--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,9 +39,8 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
+	annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
 }
 
 flyway {
