added TaskRepository test, formatting, optimize code

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
 	annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen"
+	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
 }
 
 flyway {
