--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -16,3 +16,5 @@ jwt.refresh.secret.key=404E635266556A586E3272357538782F413F4428472B4B62506453675
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
+
+logging.level.org.hibernate.envers.boot=OFF
