--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -18,3 +18,17 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 
 logging.level.org.hibernate.envers.boot=OFF
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.username=
+spring.mail.password=
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#tymeleaf
+#spring.thymeleaf.cache=false
+#spring.mvc.locale-resolver=fixed
+#spring.thymeleaf.enabled=true
