--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
-version: 2.1
+version: 2
 
 jobs:
   build:
     docker:
-      - image: cypress/base:14.17.0
+      - image: cypress/base:20.5.0
 
     working_directory: ~/app
 
@@ -26,9 +26,14 @@ jobs:
           name: Build Angular App
           command: npm run build
 
+      # Build Docker image
       - run:
-          name: Build Docker Image and Push to Docker Hub
+          name: Build Docker image
+          command: docker build -t $DOCKER_USERNAME/gremio_frontend:latest .
+
+      # Push Docker image to Docker Hub
+      - run:
+          name: Push Docker image to Docker Hub
           command: |
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker build -t <YOUR_DOCKER_USERNAME>/<YOUR_DOCKER_REPO>:<YOUR_DOCKER_IMAGE_TAG> .
-            docker push <YOUR_DOCKER_USERNAME>/<YOUR_DOCKER_REPO>:<YOUR_DOCKER_IMAGE_TAG>
+            docker push $DOCKER_USERNAME/gremio_frontend:latest
