--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
-    "@apollo/client/core": "^3.0.0",
+    "@apollo/client": "^3.9.2",
     "graphql": "^16"
   },
   "devDependencies": {
